<resources>
    <string name="rc_action_bar_back">返回</string>
    <string name="rc_action_bar_ok">确定</string>
    <string name="rc_conversation_list_title">会话列表</string>
    <string name="rc_conversation_list_empty_prompt">"暂无聊天信息"</string>
    <string name="rc_conversation_list_notice_network_unavailable">当前网络不可用，请检查你的网络设置</string>
    <string name="rc_conversation_list_notice_proxy_unavailable">当前设置的代理不可用</string>
    <string name="rc_conversation_list_notice_disconnect">无法连接到服务器</string>
    <string name="rc_conversation_list_notice_kicked">该帐号已经在其他设备登录</string>
    <string name="rc_conversation_list_notice_connecting">连接中...</string>
    <string name="rc_conversation_list_dialog_set_top">置顶该聊天</string>
    <string name="rc_conversation_list_dialog_cancel_top">取消置顶</string>
    <string name="rc_conversation_list_dialog_remove">删除该聊天</string>
    <string name="rc_conversation_list_popup_set_top">已置顶</string>
    <string name="rc_conversation_list_popup_cancel_top">取消置顶</string>
    <string name="rc_conversation_unread_dot">99+</string>
    <string name="rc_conversation_summary_content_image">[图片]</string>
    <string name="rc_conversation_summary_content_voice">[语音]</string>
    <string name="rc_conversation_summary_content_rich_text">[图文]</string>
    <string name="rc_conversation_summary_content_location">[位置]</string>
    <string name="rc_conversation_summary_content_file">[文件]</string>
    <string name="rc_conversation_summary_content_sight">[小视频]</string>
    <string name="rc_conversation_summary_content_card">[个人名片]</string>
    <string name="rc_conversation_summary_content_sticker">[动态表情]</string>
    <string name="rc_conversation_summary_content_rp">[红包]</string>
    <string name="rc_conversation_summary_content_vst">[音视频通话]</string>
    <string name="rc_conversation_summary_content_combine">[聊天记录]</string>
    <string name="rc_conversation_summary_content_draft">[草稿]</string>
    <string name="rc_conversation_summary_content_mentioned">[有人@我]</string>
    <string name="rc_conversation_summary_content_burn">[阅后即焚]</string>
    <string name="rc_gathered_conversation_private_title">单聊消息</string>
    <string name="rc_gathered_conversation_group_title">群组消息</string>
    <string name="rc_gathered_conversation_chatroom_title">聊天室消息</string>
    <string name="rc_gathered_conversation_system_title">系统消息</string>
    <string name="rc_gathered_conversation_custom_title">客服消息</string>
    <string name="rc_gathered_conversation_unkown_title">未识别消息</string>
    <string name="rc_date_yesterday">昨天</string>
    <string name="rc_date_year">年</string>
    <string name="rc_date_month">月</string>
    <string name="rc_date_day">日</string>
    <string name="rc_date_sunday">星期日</string>
    <string name="rc_date_monday">星期一</string>
    <string name="rc_date_tuesday">星期二</string>
    <string name="rc_date_wednesday">星期三</string>
    <string name="rc_date_thursday">星期四</string>
    <string name="rc_date_friday">星期五</string>
    <string name="rc_date_saturday">星期六</string>
    <string name="rc_date_morning">凌晨</string>
    <string name="rc_date_am">上午</string>
    <string name="rc_date_noon">中午</string>
    <string name="rc_date_pm">下午</string>
    <string name="rc_date_night">晚上</string>
    <string name="rc_default_message">暂不支持此 UI</string>
    <string name="rc_recalled_message">撤回了一条消息</string>
    <string name="rc_you_recalled_a_message">你撤回了一条消息</string>
    <string name="rc_you_recalled_edit">重新编辑</string>
    <string name="rc_read_receipt_status">人已读</string>
    <string name="rc_voip_occupying">声音通道被占用，请稍后再试</string>
    <string name="rc_blacklist_prompt">您已被加入黑名单</string>
    <string name="rc_recalled_a_message">&#160;撤回了一条消息</string>
    <string name="rc_admin_recalled_message">管理员&#160;撤回了一条消息</string>
    <string name="rc_unknow">未知类型消息</string>
    <string name="rc_unread_message">{0} 条新消息</string>
    <string name="rc_new_message_divider_content">以上是历史消息</string>
    <string name="rc_recall_failed_for_network_unavailable">撤回不成功，请检查网络连接</string>
    <string name="rc_recall_overtime">该消息超过撤回时间，不能被撤回。</string>
    <string name="rc_user_recalled_message">%s撤回了一条消息</string>
    <string name="rc_recall_failed">撤回失败</string>
    <string name="rc_load_image_failed">图片加载失败</string>
    <string name="rc_send_large_gif_failed">该 GIF 图尺寸过大，无法发送</string>
    <string name="rc_edit_status_progress">更新中</string>
    <string name="rc_edit_status_success">已编辑</string>
    <string name="rc_edit_status_failed">更新失败，点击重试</string>
    <string name="rc_edit_status_retry_failed">重试失败，请稍后再试！</string>
    <string name="rc_edit_status_expired">编辑已过期</string>
    <string name="rc_reference_status_delete">此消息已删除</string>
    <string name="rc_reference_status_recall">此消息已撤回</string>
    <string name="rc_reference_status_loading">消息加载中...</string>
    <string name="rc_reference_status_failed">消息获取失败</string>
    <string name="rc_edit_failed_by_remote_msg_not_exist">云端消息不存在，无法编辑</string>
    <string name="rc_edit_failed_by_sensitive">编辑内容含有敏感信息，更新失败</string>
    <string name="rc_edit_failed_by_expire">超过有效编辑时间，无法编辑</string>
    <string name="rc_voice_rec">手指上滑，取消发送</string>
    <string name="rc_voice_cancel">手指上滑，取消发送</string>
    <string name="rc_voice_short">录音时间太短</string>
    <string name="rc_voice_failure">录音失败！</string>
    <string name="rc_voice_too_long">录制时间超长</string>
    <string name="rc_voice_press_to_input">按住 说话</string>
    <string name="rc_voice_release_to_send">松开 结束</string>
    <string name="rc_cs_evaluate">评价</string>
    <string name="rc_cs_evaluate_title">请对我们本次的服务进行评价</string>
    <string name="rc_cs_evaluate_human">请对本次服务做出评价</string>
    <string name="rc_cs_evaluate_robot">机器人是否解决了您的问题</string>
    <string name="rc_cs_resolved_or_not">是否解决了您的问题 ?</string>
    <string name="rc_cs_please_comment">欢迎给我们的服务提建议~</string>
    <string name="rc_cs_submit_evaluate_content">提交评价</string>
    <string name="rc_cs_very_satisfactory">非常满意</string>
    <string name="rc_cs_satisfactory">满意</string>
    <string name="rc_cs_average">一般</string>
    <string name="rc_cs_unsatisfactory">不满意</string>
    <string name="rc_cs_very_unsatisfactory">非常不满意</string>
    <string name="rc_cs_submit">提交</string>
    <string name="rc_cs_cancel">取消</string>
    <string name="rc_cs_select_group">请选择咨询内容</string>
    <string name="rc_cs_leave_message">留言</string>
    <string name="rc_cs_please_leave_message">请您留言, 我们会尽快回复您。</string>
    <string name="rc_cs_submit_message">提交留言</string>
    <string name="rc_cs_message_submited">您的留言已提交</string>
    <string name="rc_pub_service_info_description">功能介绍</string>
    <string name="rc_pub_service_info_enter">进入公众号</string>
    <string name="rc_pub_service_info_follow">关注</string>
    <string name="rc_pub_service_info_unfollow">取消关注</string>
    <string name="rc_pub_service_info_account">公众号：%s</string>
    <string name="rc_pub_service_notification">新消息通知</string>
    <string name="rc_android.permission.READ_MEDIA_IMAGES">照片</string>
    <string name="rc_android.permission.READ_MEDIA_VIDEO">视频</string>
    <string name="rc_android.permission.READ_MEDIA_VISUAL_USER_SELECTED">部分访问</string>
    <string name="rc_android.permission.CAMERA">相机</string>
    <string name="rc_android.permission.ACCESS_FINE_LOCATION">位置信息</string>
    <string name="rc_android.permission.ACCESS_COARSE_LOCATION">位置信息</string>
    <string name="rc_android.permission.ACCESS_BACKGROUND_LOCATION">后台位置</string>
    <string name="rc_android.permission.RECORD_AUDIO">麦克风</string>
    <string name="rc_android.permission.READ_EXTERNAL_STORAGE">存储空间</string>
    <string name="rc_android.permission.WRITE_EXTERNAL_STORAGE">存储空间</string>
    <string name="rc_android.permission.READ_PHONE_STATE">电话</string>
    <string name="rc_android.permission.PROCESS_OUTGOING_CALLS">电话</string>
    <string name="rc_android.permission.BLUETOOTH_CONNECT">连接附近设备</string>
    <string name="rc_android.permission.BLUETOOTH_ADVERTISE">连接附近设备</string>
    <string name="rc_android.permission.BLUETOOTH_SCAN">连接附近设备</string>
    <string name="rc_android.permission.READ_CONTACTS">读取联系人</string>
    <string name="rc_permission_grant_needed">您需要在设置中打开权限</string>
    <string name="rc_permission_background_location_grant_tip">您需要提供后台位置权限，请在设置页面选择始终允许</string>
    <string name="rc_permission_microphone">（麦克风）。</string>
    <string name="rc_permission_microphone_and_camera">（麦克风，相机）。</string>
    <string name="rc_permission_camera">（相机）。</string>
    <string name="rc_permission_request_failed">获取权限失败</string>
    <string name="srl_content_empty">The content view in SmartRefreshLayout is empty. Do you forget to add it in xml layout file?</string>
    <string name="srl_component_falsify" formatted="false">%s falsify area,\n Represents the height[%.1fdp] of drag at run time,\n It does not show anything.</string>
    <string name="rc_location_title">位置</string>
    <string name="rc_plugin_location_message">发送位置</string>
    <string name="rc_plugin_location_sharing">共享实时位置</string>
    <string name="rc_location_exit_sharing_confirm">结束共享</string>
    <string name="rc_location_fetching">获取中&#8230;&#8230;</string>
    <string name="rc_location_fail">定位失败</string>
    <string name="rc_location_temp_failed">定位失败，请稍后重试</string>
    <string name="rc_location_sharing_exceed_max">超过最大位置共享人数</string>
    <string name="rc_location_you_are_sharing">您正在共享位置</string>
    <string name="rc_location_other_is_sharing">正在共享位置</string>
    <string name="rc_location_others_are_sharing">人正在共享位置</string>
    <string name="rc_location_others_sharing">人在共享位置</string>
    <string name="rc_location_real_time_join_notification">加入位置共享，聊天中其他人也能看到你的位置，确定加入？</string>
    <string name="rc_location_warning">提示</string>
    <string name="rc_location_exit_location_sharing">是否结束位置共享？</string>
    <string name="rc_location_real_time_exit_notification">离开会话，位置共享也会结束，确定离开？</string>
    <string name="rc_location_permission_failed">您需要在设置里打开定位权限</string>
    <string name="rc_dialog_ok">确定</string>
    <string name="rc_confirm">确认</string>
    <string name="rc_cancel">取消</string>
    <string name="rc_dialog_item_sight">小视频</string>
    <string name="rc_dialog_item_select_from_album">从相册选择</string>
    <string name="rc_choose_members">选择好友</string>
    <string name="rc_gender_man">男</string>
    <string name="rc_gender_female">女</string>
    <string name="rc_group_name_hint">请输入群名称</string>
    <string name="rc_group_name">群名称</string>
    <string name="rc_nickname_label">昵称</string>
    <string name="rc_nickname_hint">请输入昵称</string>
    <string name="rc_nickname_description">设置在当前群组中的用户名，其他群成员都可以看见</string>
    <string name="rc_gender_edit">性别修改</string>
    <string name="rc_set_remark_name">设置备注名</string>
    <string name="rc_no_friend_added">还未添加好友</string>
    <string name="rc_expired">已过期</string>
    <string name="rc_all_friend_request">全部好友请求</string>
    <string name="rc_my_received_request">我接收的好友请求</string>
    <string name="rc_my_sent_request">我发送的好友请求</string>
    <string name="rc_group_remark">群聊备注</string>
    <string name="rc_group_member_remark">群备注</string>
    <string name="rc_group_note_hint">请输入群备注</string>
    <string name="rc_group_nickname">群内昵称</string>
    <string name="rc_group_name_edit">修改群名称</string>
    <string name="rc_group_management">群管理</string>
    <string name="rc_group_managers">群管理员</string>
    <string name="rc_group_edit_info_permission">谁可以编辑群信息</string>
    <string name="rc_group_add_member_permission">谁可以添加群成员</string>
    <string name="rc_group_remove_member_permission">谁可以移除群成员</string>
    <string name="rc_group_edit_member_info_permission">谁可以修改群成员资料</string>
    <string name="rc_group_invitation_confirmation">群聊邀请确认</string>
    <string name="rc_group_transfer">转让群</string>
    <string name="rc_all_requests">全部请求</string>
    <string name="rc_pending_confirmation">待确认</string>
    <string name="rc_completed">已完成</string>
    <string name="rc_user_not_found">未搜索到用户</string>
</resources>