<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <io.rong.imkit.usermanage.component.HeadComponent
        android:id="@+id/rc_head_component"
        android:layout_width="match_parent"
        android:layout_height="@dimen/rc_title_bar_height"
        app:head_right_text="@string/rc_confirm"
        app:head_title_text="@string/rc_gender_edit" />

    <io.rong.imkit.widget.SettingItemView
        android:id="@+id/siv_gender_man"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        app:item_content="@string/rc_gender_man"
        app:item_divider="true"
        app:item_right_image="@drawable/rc_cb_select_friend_pic_btn_selected" />

    <io.rong.imkit.widget.SettingItemView
        android:id="@+id/siv_gender_female"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        app:item_content="@string/rc_gender_female"
        app:item_right_image="@drawable/rc_cb_select_friend_pic_btn_selected" />

</LinearLayout>