<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <io.rong.imkit.usermanage.component.HeadComponent
        android:id="@+id/rc_head_component"
        android:layout_width="match_parent"
        android:layout_height="@dimen/rc_title_bar_height"
        app:head_right_text="@string/rc_confirm"
        app:head_title_text="@string/rc_group_nickname" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rc_nickname_label"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/group_Nickname_input"
            style="@style/EditTextStyle.Alignment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="@drawable/rc_ext_panel_editbox_background"
            android:hint="@string/rc_nickname_hint"
            android:maxLength="64"
            android:textSize="16sp" />
    </LinearLayout>

    <!-- Description Text -->
    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/rc_nickname_description"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp" />

</LinearLayout>