<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <io.rong.imkit.usermanage.component.HeadComponent
        android:id="@+id/rc_head_component"
        android:layout_width="match_parent"
        android:layout_height="@dimen/rc_title_bar_height"
        app:head_right_text="@string/rc_confirm"
        app:head_title_text="@string/rc_group_name_edit" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="@dimen/rc_margin_size_16"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/rc_margin_size_12"
            android:text="@string/rc_group_name"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/group_name_input"
            style="@style/EditTextStyle.Alignment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="@drawable/rc_lively_panel_input_background"
            android:gravity="center_vertical"
            android:hint="@string/rc_group_name_hint"
            android:maxLength="64"
            android:textSize="16sp" />
    </LinearLayout>


</LinearLayout>