<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- 头部标题 -->
    <io.rong.imkit.usermanage.component.HeadComponent
        android:id="@+id/rc_head_component"
        android:layout_width="match_parent"
        android:layout_height="@dimen/rc_title_bar_height"
        app:head_title_text="@string/rc_group_management" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- 分割线 -->
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/rc_margin_size_12" />

            <!-- 群管理员 -->
            <io.rong.imkit.widget.SettingItemView
                android:id="@+id/siv_group_admin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/rc_title_bar_height"
                app:item_content="@string/rc_group_managers"
                app:item_divider="false"
                app:item_right_image="@drawable/rc_right_arrow"
                app:item_value_text_size="15sp" />

            <!-- 分割线 -->
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/rc_margin_size_12" />

            <!-- 谁可以编辑群信息 -->
            <io.rong.imkit.widget.SettingItemView
                android:id="@+id/siv_group_edit_info_permission"
                android:layout_width="match_parent"
                android:layout_height="@dimen/rc_title_bar_height"
                app:item_content="@string/rc_group_edit_info_permission"
                app:item_divider="true"
                app:item_right_image="@drawable/rc_right_arrow"
                app:item_value_text_size="15sp" />

            <!-- 谁可以添加群成员 -->
            <io.rong.imkit.widget.SettingItemView
                android:id="@+id/siv_group_add_member_permission"
                android:layout_width="match_parent"
                android:layout_height="@dimen/rc_title_bar_height"
                app:item_content="@string/rc_group_add_member_permission"
                app:item_divider="true"
                app:item_right_image="@drawable/rc_right_arrow"
                app:item_value_text_size="15sp" />

            <!-- 谁可以移除群成员 -->
            <io.rong.imkit.widget.SettingItemView
                android:id="@+id/siv_group_remove_member_permission"
                android:layout_width="match_parent"
                android:layout_height="@dimen/rc_title_bar_height"
                app:item_content="@string/rc_group_remove_member_permission"
                app:item_divider="true"
                app:item_right_image="@drawable/rc_right_arrow"
                app:item_value_text_size="15sp" />

            <!-- 谁可以修改群成员资料 -->
            <io.rong.imkit.widget.SettingItemView
                android:id="@+id/siv_group_edit_member_info_permission"
                android:layout_width="match_parent"
                android:layout_height="@dimen/rc_title_bar_height"
                app:item_content="@string/rc_group_edit_member_info_permission"
                app:item_divider="false"
                app:item_right_image="@drawable/rc_right_arrow"
                app:item_value_text_size="15sp" />

            <!-- 分割线 -->
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/rc_margin_size_12" />

            <!-- 群聊邀请确认 -->
            <io.rong.imkit.widget.SettingItemView
                android:id="@+id/siv_group_invitation_confirmation"
                android:layout_width="match_parent"
                android:layout_height="@dimen/rc_title_bar_height"
                app:item_content="@string/rc_group_invitation_confirmation"
                app:item_divider="false"
                app:item_switch="true" />

            <!-- 分割线 -->
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/rc_margin_size_12" />

            <!-- 转让群 -->
            <io.rong.imkit.widget.SettingItemView
                android:id="@+id/siv_group_transfer"
                android:layout_width="match_parent"
                android:layout_height="@dimen/rc_title_bar_height"
                app:item_content="@string/rc_group_transfer"
                app:item_divider="false"
                app:item_right_image="@drawable/rc_right_arrow"
                app:item_value_text_size="15sp" />
        </LinearLayout>

    </ScrollView>
</LinearLayout>
