<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/rc_common_background_color"
    android:orientation="vertical"
    tools:theme="@style/RCTraditionLightTheme">

    <TextView
        android:id="@+id/tv_sight"
        style="@style/TextStyle.Alignment"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/rc_dialog_item_sight"
        android:textColor="?attr/rc_text_primary_color"
        android:textSize="13sp" />

    <View
        android:id="@+id/view_horizontal"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="?attr/rc_line_background_color" />

    <TextView
        android:id="@+id/tv_album"
        style="@style/TextStyle.Alignment"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/rc_dialog_item_select_from_album"
        android:textColor="?attr/rc_text_primary_color"
        android:textSize="13sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="?attr/rc_line_background_color" />

    <TextView
        android:id="@+id/tv_cancel"
        style="@style/TextStyle.Alignment"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/rc_cancel"
        android:textColor="?attr/rc_text_primary_color"
        android:textSize="13sp" />

</LinearLayout>
